examples/passing/ReExportQualified/B.purs
module B where

y = "ne"
