examples/failing/ExportConflictValue/B.purs
module B where

x :: Boolean
x = false
